# ChangeLog for x11-themes/commonbox-styles
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/commonbox-styles/ChangeLog,v 1.26 2006/02/27 20:06:35 gothgirl Exp $

  27 Feb 2006; kathryn <gothgirl@gentoo.org> commonbox-styles-0.6.ebuild:
  updated homepage

  17 Jan 2006; Robin H. Johnson <robbat2@gentoo.org>
  commonbox-styles-0.6.ebuild:
  Fix dep for modular-x.

  20 Feb 2005; Lina Pezzella <j4rg0n@gentoo.org>
  commonbox-styles-0.6.ebuild:
  Stable ppc-macos

  06 Feb 2005; Markus Rothe <corsair@gentoo.org> commonbox-styles-0.6.ebuild:
  Stable on ppc64

  20 Jan 2005; Lina Pezzella <j4rg0n@gentoo.org> commonbox-styles-0.6.ebuild:
  Unstable ppc-macos. Bug #61339

  31 Dec 2004; Markus Rothe <corsair@gentoo.org> commonbox-styles-0.6.ebuild:
  Added ~ppc64 to KEYWORDS

  14 Aug 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed CVS Header.

  14 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> commonbox-styles-0.6.ebuild:
  Added IUSE=, removed S=.

  17 Feb 2004; Aron Griffis <agriffis@gentoo.org> commonbox-styles-0.6.ebuild:
  stable on ia64

  13 Nov 2003; <tuxus@gentoo.org> commonbox-styles-0.6.ebuild:
  added mips to KEYWORDS

  30 Oct 2003; Brandon Hale <tseng@gentoo.org> metadata.xml:
  Added metadata.xml

  28 Sep 2003; Markus Nigbur <pyrania@gentoo.org> commonbox-styles-0.6.ebuild:
  Added ~amd64 keyword. request by brad@mainstreetsoftworks.com in bug #29806.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*commonbox-styles-0.6 (26 Nov 2002)

  18 Apr 2003; Guy Martin <gmsoft@gentoo.org> commonbox-styles-0.6.ebuild:
  Added hppa to KEYWORDS.

  26 Nov 2002; Matt Keadle <mkeadle@gentoo.org>
  commonbox-styles-0.6.ebuild files/digest-commonbox-styles-0.6 :

  New revisions of styles from Openbox are now included. Openbox
  can now use pixmaps as window buttons, which the new styles now