@@ -1,12 +1,12 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/openbox-themes/Attic/openbox-themes-0.6-r1.ebuild,v 1.4 2006/06/14 13:05:45 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/openbox-themes/Attic/openbox-themes-0.6-r1.ebuild,v 1.5 2006/12/07 02:05:19 flameeyes Exp $
 
 DESCRIPTION="A set of themes for Openbox3."
 SRC_URI="mirror://gentoo/${P}.tar.bz2"
 HOMEPAGE="http://gumerry.co.uk/themes/"
 LICENSE="GPL-2"
-KEYWORDS="x86 ppc amd64 sparc"
+KEYWORDS="amd64 ppc sparc x86 ~x86-fbsd"
 IUSE="gtk"
 SLOT="0"
 
