@@ -1,6 +1,11 @@
 # ChangeLog for x11-themes/openbox-themes
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/openbox-themes/Attic/ChangeLog,v 1.18 2006/06/14 13:05:45 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/openbox-themes/Attic/ChangeLog,v 1.19 2006/12/07 02:05:19 flameeyes Exp $
+
+  07 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
+  openbox-themes-0.6-r1.ebuild:
+  Add ~x86-fbsd keyword as per bug #156873. Thanks to Mark Kowarsky
+  (mark_alec) for reporting.
 
   14 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   openbox-themes-0.6-r1.ebuild:
