@@ -1,6 +1,11 @@
 # ChangeLog for x11-themes/commonbox-styles
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/commonbox-styles/ChangeLog,v 1.26 2006/02/27 20:06:35 gothgirl Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/commonbox-styles/ChangeLog,v 1.27 2006/12/07 02:06:42 flameeyes Exp $
+
+  07 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
+  commonbox-styles-0.6.ebuild:
+  Add ~x86-fbsd keyword as per bug #156873. Thanks to Mark Kowarsky
+  (mark_alec) for reporting.
 
   27 Feb 2006; kathryn <gothgirl@gentoo.org> commonbox-styles-0.6.ebuild:
   updated homepage
